# neoterm-api-package

./: .gitignore  CMakeLists.txt  LICENSE  README.md  neoterm-api-broadcast.c  neoterm-api.c  neoterm-api.h  neoterm-callback.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: neoterm-api-start.in  neoterm-api-stop.in  neoterm-audio-info.in  neoterm-battery-status.in  neoterm-brightness.in  neoterm-call-log.in  neoterm-camera-info.in  neoterm-camera-photo.in  neoterm-clipboard-get.in  neoterm-clipboard-set.in  neoterm-contact-list.in  neoterm-dialog.in  neoterm-download.in  neoterm-fingerprint.in  neoterm-infrared-frequencies.in  neoterm-infrared-transmit.in  neoterm-job-scheduler.in  neoterm-keystore.in  neoterm-location.in  neoterm-media-player.in  neoterm-media-scan.in  neoterm-microphone-record.in  neoterm-nfc.in  neoterm-notification-channel.in  neoterm-notification-list.in  neoterm-notification-remove.in  neoterm-notification.in  neoterm-saf-create.in  neoterm-saf-dirs.in  neoterm-saf-ls.in  neoterm-saf-managedir.in  neoterm-saf-mkdir.in  neoterm-saf-read.in  neoterm-saf-rm.in  neoterm-saf-stat.in  neoterm-saf-write.in  neoterm-sensor.in  neoterm-share.in  neoterm-sms-inbox.in  neoterm-sms-list.in  (+17 more)
